mahdiyeh/fix: alignment_issue_on_home_page (#6493)
* fix_alignment_issue_on_home_page

* Ali / Update Pillar 3 (#6495)

* Update Pillar 3

* Update file name

--- a/src/sass/static/home.scss
+++ b/src/sass/static/home.scss
@@ -153,6 +153,9 @@
         .gr-centered-m {
             margin: 0 auto;
         }
+        .margin-top-10 {
+            margin-top: 10px;
+        }
     }
 }
 
